--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "06032ab9-4872-44b4-82ac-9121afb5affe"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
